# PiPico

./: .gitignore  README.md  mandelbrot-multicore.zip:Zone.Identifier  mandelbrot.rar
cam-vga/: ArduCAM.cpp  CMakeLists.txt  CMakeLists_copy.txt  cam_vga.c  cam_vga.cpp  mandelbrot.c  rgb.pio
cam_vga/: CMakeLists copy.txt  CMakeLists.txt  cam_vga.cpp
cam_vga/ArduCAM/: ArduCAM.h
cam_vga_pio/: CMakeLists.txt  README.md  cam.pio  cam_vga_pio.cpp  pio_spi.cpp  pio_spi.h  rgb.pio
cam_vga_pio/ArduCAM/: ArduCAM.cpp  ov5642_regs.h
mandelbrot/: cam_vga.cpp
mandelbrot/ArduCAM/: ArduCAM.cpp  ov5642_regs.h
mouse/: CMakeLists.txt  mouse.c  ps2.pio
pio-dma/: CMakeLists.txt  spi.pio  spi_cpu.c  spi_dma.c  spi_dma_chain.c
thomas-pico/: CMakeLists.txt  spi.pio  test.c
vga-spi/: CMakeLists.txt  rgb_1.pio  vga_spi.c
